added third page of the site, created new classes in views.py and connected to new urls

--- a/my_charts/web_app/templates/home_page/home_page.html
+++ b/my_charts/web_app/templates/home_page/home_page.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="AboutButton">
                         <img class="AboutButtonIco" src="../../static/Images/Icons/About-Icon.png" alt="">
-                        <form action="/" method="get" class="btn_form">
+                        <form action="/about" method="get" class="btn_form">
                             <input type="submit" name="about_btn" class="submit_btn" value="About">
                         </form>
                     </div>
